# HubScreenSrc

./: README.md  build.sh  client1.ovpn  key.pem
app/: settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/gradle/wrapper/: gradle-wrapper.properties
hubscreen/hub-ai/: README.md  hub-ai.py  module.txt  typedef.proto  typedef_pb2.py
hubscreen/hub-ble/: CMakeLists.txt  config.hh  main.cc
hubscreen/hub-ble/proto/ble/: ble.pb.cc  ble.pb.h  ble.proto
hubscreen/hub-ble/proto/hub/: typedef.pb.cc  typedef.pb.h
hubscreen/hub-ble/proto/zigbee/: zigbee.pb.h
hubscreen/hub-ble/transport/uart/: uart.cc  uart.hh
hubscreen/hub-master/: Cargo.toml
hubscreen/hub-master/src/: error.rs  logic.rs  main.rs  master.rs  sqlite.rs  system_intergration.rs  timer.rs  transport.rs
hubscreen/hub-master/src/proto/: typedef.rs
hubscreen/hub-master/src/transport/: mqtt.rs
hubscreen/hub-ota/: Cargo.toml
hubscreen/hub-ota/src/: logic.rs  main.rs  ota.rs  system_intergration.rs  transport.rs
hubscreen/hub-ota/src/proto/: typedef.proto
hubscreen/hub-ota/src/transport/: http.rs  mqtt.rs
hubscreen/hub-screen/: config.hh  main.cc
hubscreen/hub-wifi/: Cargo.toml
hubscreen/hub-wifi/src/: error.rs  logic.rs  main.rs  system_intergration.rs  transport.rs
hubscreen/hub-wifi/src/proto/: mod.rs
hubscreen/hub-zigbee/: CMakeLists.txt  config.hh  main.cc
hubscreen/hub-zigbee/proto/hub/: typedef.pb.cc  typedef.pb.h  typedef.proto
hubscreen/hub-zigbee/proto/zigbee/: zigbee.pb.cc  zigbee.pb.h  zigbee.proto
hubscreen/hub-zigbee/transport/mqtt/: mqtt.cc  mqtt.hh
hubscreen/hub-zigbee/transport/uart/: uart.cc  uart.hh
server/hub-cloud/: Cargo.toml
server/hub-cloud/src/: cloud.rs  error.rs  logic.rs  main.rs  ota.rs  sqlite.rs  system_intergration.rs  transport.rs
server/hub-cloud/src/proto/: mod.rs  typedef.proto  typedef.rs
server/hub-cloud/src/transport/: http.rs  mqtt.rs
toolchain/python3.8/: README.md
toolchain/python3.8/Python-3.8.1/: Makefile  Makefile.pre  config.status  pyconfig.h
(+26 files in other folders)
