[package]
name = "hub-cloud"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true  

[dependencies]
rumqttc = "0.24.0"
pretty_env_logger =" 0.5.0"
protobuf = "3.4.0"
protobuf-codegen = "3.4.0"
protoc-rust = "^2.0"
tokio = { version = "1.35.1", features = ["full"] }
regex = "1.10.4"
clap = {version = "4.4.11", features = ["derive", "env"]}
log = "0.4.20"
env_logger = { version = "0.11.2" }
rusqlite = "0.31.0"
chrono = "0.4.38"
httparse = "1.8.0"
hex = "0.4"
